--- a/style.css
+++ b/style.css
@@ -1,9 +1,50 @@
+/*Header*/
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px;
+}
+
+.headerLeft {
+    display: flex;
+    align-items: center;
+}
+
+.headline {
+    color: black;
+}
+
+.headerImg {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-left: 20px;
+}
+
+.headerRight {
+    display: flex;
+    align-items: center;
+}
+
+.inputfield {
+    margin-right: 10px;
+}
+
+.btn-secondary {
+    background-color: #194f6e !important;
+}
+
+/*Body*/
+
 body {
     margin: 0;
     background-image: url('./img/pokedex.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    font-family: 'Noto Sans';
 }
 
 
@@ -26,14 +67,12 @@ body {
 }
 
 #pokedexNumberSymbol {
-    margin-right: 5px; /* Abstand zwischen dem Symbol und der Nummer */
+    margin-right: 5px;
+    /* Abstand zwischen dem Symbol und der Nummer */
 }
 
 .card {
     margin: 20px;
-}
-
-.card {
     transition: transform 0.2s ease-in-out;
 }
 
@@ -41,3 +80,12 @@ body {
     transform: scale(1.05);
 }
 
+
+.card.fairy {
+    background-color: #ed98ed;
+}
+
+
+.list-group-item .fairy {
+    background-color: #ed98ed;
+}
