--- a/style.css
+++ b/style.css
@@ -59,33 +59,30 @@ body {
 #pokemonImg {
     height: auto;
     width: 80%;
+    margin: 0 auto;
 }
 
 .pokedex-number-container {
     display: flex;
     align-items: center;
+    padding-bottom: 0;
 }
 
 #pokedexNumberSymbol {
     margin-right: 5px;
-    /* Abstand zwischen dem Symbol und der Nummer */
 }
 
 .card {
     margin: 20px;
     transition: transform 0.2s ease-in-out;
+    height: 380px !important;
 }
 
 .card:hover {
     transform: scale(1.05);
 }
 
-
-.card.fairy {
-    background-color: #ed98ed;
+.cardDescription{
+    margin-left: 15px;
 }
 
-
-.list-group-item .fairy {
-    background-color: #ed98ed;
-}
