--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 
     <div class="headerLeft">
         <h1 class="headline">Pokédex</h1>
-        <a href="../index.html"><img src="../img/pokeball.jpg" alt="Pokeball" class="headerImg"></a>
+        <a href="../index.html"><img src="./img/pokeball.jpg" alt="Pokeball" class="headerImg"></a>
     </div>
 
 
