--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
     background-color: #194f6e !important;
 }
 
+
 /*Body*/
 
 body {
@@ -47,17 +48,16 @@ body {
     font-family: 'Noto Sans';
 }
 
-
 #pokedex {
     min-height: 50vh;
-    background-color: rgba(250, 250, 138, 0.473);
+    background-color: rgba(250, 250, 138, 0.3);
     color: black;
     display: flex;
+    flex-direction: column;
 }
 
-
 #pokemonImg {
-    height: auto;
+    height: 200px;
     width: 80%;
     margin: 0 auto;
 }
@@ -78,11 +78,26 @@ body {
     height: 380px !important;
 }
 
+#card {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.img-fluid {
+    max-width: 50% !important;
+}
+
 .card:hover {
     transform: scale(1.05);
 }
 
-.cardDescription{
+.cardDescription {
     margin-left: 15px;
 }
 
+.buttonStyle {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
