--- a/stylePopup.css
+++ b/stylePopup.css
@@ -1,8 +1,23 @@
-/*#overlay {
+.overlay{
+    display: none;
+}
+
+.overlayOutside {
     position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.overlayVisible {
+    display: block;
+    position: absolute;
+    background-color: white;
+    height: 550px;
+    width: 50%;
+    z-index: 1;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 400px;
-    width: 350px;
-}*/
+}
