--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,6 @@
 
     <div class="headerRight">
         <input class="inputfield" type="text">
-        <button type="button" class="btn btn-secondary btn-sm">Suchen</button>
+        <button onclick="searchPokemon()" type="button" class="btn btn-secondary btn-sm">Suchen</button>
     </div>
 </div>
