--- a/stylePopup.css
+++ b/stylePopup.css
@@ -1,23 +1,47 @@
-.overlay{
-    display: none;
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 2px solid black;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
 }
 
-.overlayOutside {
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+.popup-content {
+  text-align: center;
 }
 
-.overlayVisible {
-    display: block;
-    position: absolute;
-    background-color: white;
-    height: 550px;
-    width: 50%;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.close {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.navigation {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  text-align: center;
+}
+
+.arrow {
+  font-size: 40px;
+  cursor: pointer;
+  vertical-align: middle;
+  margin: 0 10px;
+}
+
+.arrow.left {
+  position: absolute;
+  left: 10px;
+}
+
+.arrow.right {
+  position: absolute;
+  right: 50px;
 }
