--- a/style.css
+++ b/style.css
@@ -1,112 +1,121 @@
 /*Header*/
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px;
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
 }
 
 .headerLeft {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .headline {
-    color: black;
+  color: black;
 }
 
 .headerImg {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin-left: 20px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-left: 20px;
 }
 
 .headerRight {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .inputfield {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .btn-secondary {
-    background-color: #194f6e !important;
+  background-color: #194f6e !important;
 }
-
 
 /*Body*/
 
 body {
-    margin: 0;
-    background-image: url('./img/pokedex.jpg');
-    background-size: cover;
-    background-repeat: repeat;
-    background-position: center;
-    font-family: 'Noto Sans';
-    overflow-x: hidden;
+  margin: 0;
+  background-image: url("./img/pokedex.jpg");
+  background-size: 90%;
+  background-repeat: repeat;
+  background-position: center;
+  font-family: "Noto Sans";
+  overflow-x: hidden;
 }
 
 #pokedex {
-    min-height: 50vh;
-    background-color: rgba(250, 250, 138, 0.3);
-    color: black;
-    display: flex;
-    flex-direction: column;
+  min-height: 50vh;
+  background-color: rgba(250, 250, 138, 0.3);
+  color: black;
+  display: flex;
+  flex-direction: column;
 }
 
-
 .pokedex-number-container {
-    display: flex;
-    align-items: center;
-    padding-bottom: 0;
+  display: flex;
+  align-items: center;
+  padding-bottom: 0;
 }
 
 #pokedexNumberSymbol {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .card {
-    margin: 20px;
-    transition: transform 0.2s ease-in-out;
-    height: 380px !important;
+  margin: 20px;
+  transition: transform 0.2s ease-in-out;
+  height: 380px !important;
 }
 
 #card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .imageContainer {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .img-fluid {
-    max-width: 50% !important;
+  max-width: 50% !important;
 }
 
 .number {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .card:hover {
-    transform: scale(1.05);
-    cursor: pointer;
+  transform: scale(1.05);
+  cursor: pointer;
 }
 
 .cardDescription {
-    margin-left: 15px;
+  margin-left: 15px;
 }
 
 .buttonStyle {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
+@media (max-width: 600px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+  }
 
+  .headerRight {
+    margin-top: 15px;
+  }
+}
