--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ body {
   overflow-x: hidden;
 }
 
+.searchButton{
+  cursor: pointer;
+}
+
 #pokedex {
   min-height: 50vh;
   background-color: rgba(250, 250, 138, 0.3);
@@ -105,6 +109,10 @@ body {
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+#loadMoreButton{
+  cursor: pointer;
 }
 
 @media (max-width: 600px) {
