--- a/style.css
+++ b/style.css
@@ -1,9 +1,30 @@
+/*Scrollbalken*/
+
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background: rgba(250, 250, 138, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(227, 168, 172);
+  border-radius: 20px;
+  border: 3px solid rgb(217, 165, 132);
+}
+
+/*Hauptcontainer*/
+.mainContainer {
+  max-width: 1920px;
+}
+
 /*Header*/
 
 .header {
   display: flex;
   justify-content: space-between;
-  margin: 20px;
+  align-items: center;
 }
 
 .headerLeft {
@@ -46,15 +67,16 @@ body {
   background-position: center;
   font-family: "Noto Sans";
   overflow-x: hidden;
+  display: flex;
+  justify-content: center;
 }
 
-.searchButton{
+.searchButton {
   cursor: pointer;
 }
 
 #pokedex {
   min-height: 50vh;
-  background-color: rgba(250, 250, 138, 0.3);
   color: black;
   display: flex;
   flex-direction: column;
@@ -111,7 +133,7 @@ body {
   margin-bottom: 20px;
 }
 
-#loadMoreButton{
+#loadMoreButton {
   cursor: pointer;
 }
 
